More chanegs related to changes of normal tables and SPs to Order. Prefix

--- a/ExpertOrderManagement/OrderAdminPanel/Views/Admin/Edit.cshtml
+++ b/ExpertOrderManagement/OrderAdminPanel/Views/Admin/Edit.cshtml
@@ -208,7 +208,7 @@
         });
         $('#btnView').on('click', function () {
             $.ajax({
-                url: '@Url.Action("GetAdminList","Admin")',
+                url: '@Url.Action("GetList","Admin")',
                 success: function (result) {
                     if (result) {
                         $('#viewData').empty();
