--- a/ExpertOrderManagement/OrderAdminPanel/Views/Shared/_UserLayout.cshtml
+++ b/ExpertOrderManagement/OrderAdminPanel/Views/Shared/_UserLayout.cshtml
@@ -104,21 +104,17 @@
 
     @RenderBody()
 
-    <footer class="footer">
+    @*<footer class="footer">
         <div class="container">
             <p class="text-muted">Place sticky footer content here.</p>
         </div>
-    </footer>
+    </footer>*@
     <div id="loader-wrapper" style="display:none">
         <div id="loader"></div>
     </div>
-    @*<script src="@Url.Content("~/Scripts/jquery.validate.min.js")"></script>*@
     <script src="@Url.Content("~/Scripts/bootstrapValidator.min.js")"></script>
     <script src="@Url.Content("~/Content/metro-ui/js/metro.js")"></script>
     <script src="@Url.Content("~/Content/metro-ui/js/dialog.js")"></script>
-    @*<script src="@Url.Content("~/Content/metro-ui/js/docs.js")"></script>*@
-    @*<script src="@Url.Content("~/Content/metro-ui/js/prettify/run_prettify.js")"></script>*@
-    @*for reference of validation you can visit http://formvalidation.io/*@
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <script src="@Url.Content("~/Scripts/site.js")"></script>
 
