--- a/ExpertOrderManagement/OrderAdminPanel/Views/Admin/Edit.cshtml
+++ b/ExpertOrderManagement/OrderAdminPanel/Views/Admin/Edit.cshtml
@@ -12,7 +12,7 @@
             </div>
 
             <div class="panel-body">
-                @using (Html.BeginForm("Save", "Admin", FormMethod.Post, new { @id = "frmAdminMaster", @class = "form-horizontal" }))
+                @using (Html.BeginForm("Edit", "Admin", FormMethod.Post, new { @id = "frmAdminMaster", @class = "form-horizontal" }))
                 {
                     <div class="form-group">
                         <label class="col-md-3 control-label">First Name :</label>
@@ -89,7 +89,7 @@
     </p>
     <div class="row">
         <div class="col-md-6 text-center">
-            <a href="@Url.Action("DeleteAdminMaster", "Dashboard", new { ID = Model.ID})" class="btn btn-danger face"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Yes</a>
+            <a href="@Url.Action("Delete", "Admin", new { ID = Model.ID})" class="btn btn-danger face"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Yes</a>
         </div>
         <div class="col-md-6 text-center">
             <button type="button" id="btnSubmit" onclick="toggleMetroDialog('#dialog')" class="btn btn-primary face"><span class="glyphicon glyphicon-log-in"></span> &nbsp;&nbsp;No</button>
