--- a/ExpertOrderManagement/OrderAdminPanel/Views/Client/Remove.cshtml
+++ b/ExpertOrderManagement/OrderAdminPanel/Views/Client/Remove.cshtml
@@ -69,7 +69,7 @@
     </p>
     <div class="row">
         <div class="col-md-6 text-center">
-            <a id="aDelete" href="@Url.Action("Delete", "Client", new { ID = Model.FirstOrDefault().ClientID})" class="btn btn-danger face"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Yes</a>
+            <a id="aDelete" href="@Url.Action("Delete", "Client", new { ID = (Model!=null? Model.FirstOrDefault().ClientID:0)})" c class="btn btn-danger face"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Yes</a>
         </div>
         <div class="col-md-6 text-center">
             <button type="button" id="btnSubmit" onclick="toggleMetroDialog('#dialog')" class="btn btn-primary face"><span class="glyphicon glyphicon-log-in"></span> &nbsp;&nbsp;No</button>
