--- a/ExpertOrderManagement/OrderAdminPanel/Views/Distributor/DoRecharge.cshtml
+++ b/ExpertOrderManagement/OrderAdminPanel/Views/Distributor/DoRecharge.cshtml
@@ -13,7 +13,7 @@
             </div>
 
             <div class="panel-body">
-                @using (Html.BeginForm("DoRecharge", "Dashboard", FormMethod.Post, new { @id = "frmDistributorRecharge", @class = "form-horizontal" }))
+                @using (Html.BeginForm("DoRecharge", "Distributor", FormMethod.Post, new { @id = "frmDistributorRecharge", @class = "form-horizontal" }))
                 {
                     <div class="form-group">
                         <label class="col-md-3 control-label">Distributor :</label>
