--- a/ExpertOrderManagement/OrderAdminPanel/Views/Shared/_UserLayout.cshtml
+++ b/ExpertOrderManagement/OrderAdminPanel/Views/Shared/_UserLayout.cshtml
@@ -16,7 +16,11 @@
     <link href="@Url.Content("~/Content/site.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/bootstrapValidator.min.css")" rel="stylesheet" />
     <script src="@Url.Content("~/Scripts/jquery-1.10.2.js")"></script>
-
+    <style>
+        .navbar > .container {
+            width:90%
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -104,11 +108,6 @@
 
     @RenderBody()
 
-    @*<footer class="footer">
-        <div class="container">
-            <p class="text-muted">Place sticky footer content here.</p>
-        </div>
-    </footer>*@
     <div id="loader-wrapper" style="display:none">
         <div id="loader"></div>
     </div>
